[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Turret.gd" type="Script" id=1]
[ext_resource path="res://sprites/Sprites/Furniture and defend/turret/turel1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Sprites/Furniture and defend/turret/nozhki2.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 288.111

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.0259, 13.3833 )

[node name="Turret" type="StaticBody2D" groups=[
"grab",
"target",
]]
script = ExtResource( 1 )

[node name="Collision_body" type="CollisionPolygon2D" parent="." groups=[
"coll",
]]
visible = false
polygon = PoolVector2Array( -8.66505, 15.5356, 9.26857, 15.1816, 17.8814, 22.8506, 23.8986, 23.5585, 23.0727, 18.3672, 15.2858, 9.04646, 15.5217, -9.12312, 24.3706, -18.6798, 24.0166, -24.1071, 17.9994, -23.9891, 9.0326, -15.2583, 3.13338, -15.9662, -4.06366, -15.9662, -8.31109, -15.8482, -16.57, -23.6352, -23.6491, -23.7532, -23.6491, -16.6741, -15.2722, -8.76917, -14.9182, 9.87235, -22.2332, 17.0694, -23.885, 23.6765, -16.688, 23.9125 )

[node name="Head" type="KinematicBody2D" parent="."]

[node name="Collision_head" type="CollisionPolygon2D" parent="Head" groups=[
"coll",
]]
visible = false
polygon = PoolVector2Array( -15.0362, 8.22057, -15.3901, -8.5332, -8.19311, -15.8482, -2.52986, -32.1301, 2.42548, -32.1301, 8.32469, -15.4943, 15.1678, -9.12312, 15.2858, 8.45654, 8.67865, 15.5356, -8.54706, 15.7716 )
disabled = true

[node name="turel1" type="Sprite" parent="Head"]
position = Vector2( -0.340828, -0.404953 )
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 2 )

[node name="shot_time" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="reload" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Visible_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visible_zone"]
visible = false
position = Vector2( 0, 0.117985 )
shape = SubResource( 1 )

[node name="nozhki2" type="Sprite" parent="."]
scale = Vector2( 1.7, 1.7 )
z_index = -10
texture = ExtResource( 3 )

[node name="without_turrets" type="Area2D" parent="." groups=[
"without",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="without_turrets"]
visible = false
shape = SubResource( 2 )
[connection signal="timeout" from="shot_time" to="." method="_on_shot_time_timeout"]
[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
[connection signal="body_entered" from="Visible_zone" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Visible_zone" to="." method="_on_Visible_zone_body_exited"]
